letter spacing updated to ensure icons are properly aligned on both firefox and chrome and Edge

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "manrope", sans-serif;
+  font-family: "manrope", Arial, Helvetica, sans-serif;
 }
+
+/* content container */
 .wrapper {
   display: flex;
   justify-content: space-between;
@@ -26,6 +28,7 @@ body {
   background-color: rgb(192, 188, 188);
 }
 
+/* Login box - visible */
 .login-box {
   background-color: rgb(192, 188, 188);
   width: 20rem;
@@ -38,13 +41,14 @@ body {
   transition: all 1s ease-in-out;
   bottom: 0;
 }
-
+/* Login box - hidden */
 .login-box.hidden {
   position: absolute;
   bottom: -30rem;
   transition: all 1s ease-in-out;
 }
 
+/* Go to login page */
 .login-start {
   background: linear-gradient(
     180deg,
@@ -62,13 +66,14 @@ body {
   transition: all 2s ease;
   top: 0;
 }
-
+/* Go to login page - hidden */
 .login-start.hidden {
   position: absolute;
   top: 30rem;
   transition: all 2s ease;
 }
 
+/* Go to register page */
 .register-start {
   background: linear-gradient(
     0deg,
@@ -86,13 +91,13 @@ body {
   top: 0;
   transition: all 2s ease;
 }
-
+/* Go to register page - hidden*/
 .register-start.hidden {
   position: absolute;
   top: -30rem;
   transition: all 2s ease;
 }
-
+/* Register box */
 .register-box {
   background: rgb(192, 188, 188);
   width: 20rem;
@@ -106,13 +111,13 @@ body {
   top: 0;
   transition: all 1s ease-in-out;
 }
-
+/* Register box - hidden*/
 .register-box.hidden {
   position: absolute;
   top: -30rem;
   transition: all 1s ease-in-out;
 }
-
+/* Reset password box */
 .reset-box {
   background: transparent;
   width: 20rem;
@@ -126,7 +131,7 @@ body {
   top: 0;
   transition: all 1.5s ease-in-out;
 }
-
+/* Reset password box - hidden*/
 .reset-box.hidden {
   position: absolute;
   top: 0;
@@ -134,6 +139,9 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
+/* -------------- Inputs ------------ */
+
+/* input field flex container*/
 .input-box {
   display: flex;
   justify-content: center;
@@ -141,37 +149,36 @@ body {
   width: 100%;
 }
 
-/* -------------- Inputs ------------ */
+/* input fields*/
 input {
-  border-radius: 20px;
-  border: none;
-  padding: 1rem;
-  margin: 0.5rem 0rem;
-  color: rgb(121, 75, 194);
-  outline: none;
   width: 15rem;
+  border-radius: 20px;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  color: rgb(121, 75, 194);
+  border: none;
+  outline: none;
 }
 
 input::placeholder {
   color: black;
 }
 
+/* Terms & condition checkbox */
 .terms {
   color: white;
   font-size: 0.8rem;
+  margin-left: 1rem;
 }
 .terms .checkbox {
   width: 1rem;
   height: 1rem;
   accent-color: rgb(121, 75, 194);
-  transform: translateY(3px);
+  transform: translateY(1px);
   margin-top: 0;
 }
 
-.forgot {
-  justify-self: center;
-}
-
+/* Remember me checkbox */
 .remember {
   margin-left: 0.5rem;
   color: white;
@@ -181,26 +188,25 @@ input::placeholder {
 .remember input {
   width: 1rem;
   height: 1rem;
-  transform: translateY(3px);
+  transform: translateY(1px);
   accent-color: rgb(102, 0, 204);
-}
-
-.terms {
-  margin-left: 1rem;
 }
 
 /* -------------- links ------------ */
 
+/* General link settings */
 a {
   color: white;
   text-decoration: none;
   font-size: 0.8rem;
 }
 
+/* Terms & condition link */
 .terms a {
   font-style: italic;
 }
 
+/* Go back to login page link */
 .go-back a:hover,
 .forgot a:hover,
 .terms a:hover {
@@ -210,12 +216,14 @@ a {
 
 /* -------------- Buttons ------------ */
 
+/* Button container*/
 .btn {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 2rem 0 1rem 0;
 }
+/* General Button settings*/
 button {
   border-radius: 20px;
   padding: 1rem;
@@ -281,27 +289,25 @@ button {
   cursor: pointer;
 }
 
+.reset-email {
+  position: relative;
+}
 .reset-box .email-icon {
   position: absolute;
-  top: 15.6rem;
+  top: 14.6rem;
   right: 3.5rem;
   width: 1.3rem;
   cursor: pointer;
 }
 
 /* -------------- Text utilities ------------ */
-
 h1,
 h2 {
   color: black;
   text-align: center;
   margin: 3rem 2rem;
-  letter-spacing: 1px;
+  letter-spacing: 0px;
   line-height: 100%;
-}
-
-h2 {
-  letter-spacing: 0;
 }
 
 .register-box h1 {
